; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_dir.c__TIFFsetDoubleArray.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_dir.c__TIFFsetDoubleArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_TIFFsetDoubleArray(double** %0, double* %1, i32 %2) #0 {
  %4 = alloca double**, align 8
  %5 = alloca double*, align 8
  %6 = alloca i32, align 4
  store double** %0, double*** %4, align 8
  store double* %1, double** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load double**, double*** %4, align 8
  %8 = bitcast double** %7 to i8**
  %9 = load double*, double** %5, align 8
  %10 = bitcast double* %9 to i8*
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @setByteArray(i8** %8, i8* %10, i32 %11, i32 8)
  ret void
}

declare dso_local i32 @setByteArray(i8**, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
